2011-07-14  Adam Barth  <abarth@webkit.org>

        The beforeload event allows tracking URI changes in a frame
        https://bugs.webkit.org/show_bug.cgi?id=64482

        Reviewed by Nate Chapin.

        Test whether the beforeload event is fired for various kinds of redirects.

        * http/tests/security/beforeload-iframe-client-redirect-expected.txt: Added.
        * http/tests/security/beforeload-iframe-client-redirect.html: Added.
        * http/tests/security/beforeload-iframe-server-redirect-expected.txt: Added.
        * http/tests/security/beforeload-iframe-server-redirect.html: Added.
        * http/tests/security/resources/post-done.html: Added.
        * http/tests/security/resources/client-redir.html: Added.

2011-07-14  Tim Horton  <timothy_horton@apple.com>

        Clear SVGElementInstance's children immediately upon detachment
        https://bugs.webkit.org/show_bug.cgi?id=63739
        <rdar://problem/9705708>

        Reviewed by Nikolas Zimmermann.

        In addition to clearing the instance's children in the destructor,
        clear them when the instance is detached from its <use>. This way,
        we won't attempt to use them after we're detached but before the
        destructor has been called.

        * svg/custom/use-crash-using-children-before-destroy-expected.txt: Added.
        * svg/custom/use-crash-using-children-before-destroy.svg: Added.

2011-07-13  Abhishek Arya  <inferno@chromium.org>

        Tests that we do not crash when frame is blown away in a beforeload
        event.
        https://bugs.webkit.org/show_bug.cgi?id=64457

        Reviewed by Adam Barth.

        * fast/events/form-iframe-target-before-load-crash.html:
        * fast/events/form-iframe-target-before-load-crash2-expected.txt: Added.
        * fast/events/form-iframe-target-before-load-crash2.html: Added.

2011-05-16  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.
