@@ -1,3 +1,14 @@
+2011-07-16  Sergey Glazunov  <serg.glazunov@gmail.com>
+
+        DOMWindow::open performs a security check on a wrong window
+        https://bugs.webkit.org/show_bug.cgi?id=64651
+
+        Reviewed by Adam Barth.
+
+        * http/tests/security/resources/xss-DENIED-window-open-parent-attacker.html: Added.
+        * http/tests/security/xss-DENIED-window-open-parent-expected.txt: Added.
+        * http/tests/security/xss-DENIED-window-open-parent.html: Added.
+
 2011-07-14  Adam Barth  <abarth@webkit.org>
 
         The beforeload event allows tracking URI changes in a frame
